<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable name="addProductPageFragment" type="com.islimakkaya.artake.fragment.AddProductPageFragment" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddProductPageFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSellerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seller_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextProductImageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_image_url" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="@{() -> addProductPageFragment.addProduct(editTextSellerName.getText().toString, editTextProductName.getText().toString, editTextProductPrice.getText().toString, editTextProductDescription.getText().toString, editTextProductImageUrl.getText().toString)}"
        android:text="@string/button_add_product"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout11" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>