<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable name="artObject" type="com.islimakkaya.artake.entity.Arts" />
        <variable name="detailPageFragment" type="com.islimakkaya.artake.fragment.ArtsDetailPageFragment" />
        <variable name="artPrice" type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.ArtsDetailPageFragment">


        <ImageView
            android:id="@+id/imageViewDetailPage"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOffWhite"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:fontFamily="@font/raleway_medium"
                android:onClick="@{() -> detailPageFragment.chipClicked(chipOffWhite, artObject.art_price)}"
                android:text="@string/chip_off_white"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:checkedIconTint="@color/black"
                app:checkedIconVisible="true"
                app:chipBackgroundColor="@color/off_white" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBrown"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:fontFamily="@font/raleway_medium"
                android:onClick="@{() -> detailPageFragment.chipClicked(chipBrown, artObject.art_price)}"
                android:text="@string/chip_brown"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:checkedIconTint="@color/white"
                app:checkedIconVisible="true"
                app:chipBackgroundColor="@color/tree_house" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBlack"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:fontFamily="@font/raleway_medium"
                android:onClick="@{() -> detailPageFragment.chipClicked(chipBlack, artObject.art_price)}"
                android:text="@string/chip_black"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:checkedIconTint="@color/white"
                app:checkedIconVisible="true"
                app:chipBackgroundColor="@color/black" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewImageDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/expletus_sans"
            android:text="@{artObject.art_description}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDetailPage" />

        <TextView
            android:id="@+id/textViewDetailPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/expletus_sans"
            android:text='@{artPrice + "₺"}'
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        <TextView
            android:id="@+id/textViewDetailCampaignPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/expletus_sans"
            android:text="50% Sale Price"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetailPrice" />

        <Button
            android:id="@+id/buttonDetailAddtoCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> detailPageFragment.onClickAddCart(artObject.art_id, 1)}"
            android:text="@string/button_add_cart"
            android:textAllCaps="false"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_shopping_cart"
            app:iconTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetailCampaignPrice" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:text="@string/select_frame"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewImageDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>